# swagger.yml
@@ -3,11 +3,10 @@ info:
   title: Gestione Progetto
   description: Servizi per la gestione di progetti
   version: 1.0.0
-  
 paths:
   /progetto:
     get:
-      operationId: CercaTutti
+      operationId: cercaTutti
       description: Ritorna tutti i progetti
       responses:
         '200':
@@ -18,12 +17,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/progettoDTO'
-                  
         '401':
           description: errore
-          
     post:
-      operationId: AggiungiProgetto
+      operationId: aggiungiProgetto
       description: Aggiunge progetto nel db
       requestBody:
         description: crea prima il body per inserire nel db
@@ -41,20 +38,19 @@ paths:
                 $ref: '#/components/schemas/progettoDTO'
         '401':
           description: Input non valido
-          
   /progetto/{id}:
     put:
       summary: Modifica un progetto
       description: Modifica un progetto ricevendo un id
-      operationId: ModificaProgettoId
+      operationId: modificaProgettoId
       parameters:
-        - name: id
-          in: path
-          description: ID del progetto
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: path
+        description: ID del progetto
+        required: true
+        schema:
+          type: integer
+          format: int64
       requestBody:
         description: Aggiorna il progetto
         content:
@@ -72,10 +68,9 @@ paths:
         '401':
           description: Persona not found
           
-          
     delete:
       summary: Cancella una persona
-      operationId: CancellaProgettoId
+      operationId: cancellaProgettoId
       description: Cancella una persona ricevando l'id
       parameters:
       - name: id
@@ -94,26 +89,27 @@ paths:
                 type: string
         '401':
           description: Progetto non trovato
+          
   /progetto/associa/{idProgetto}/{idLavoratore}:
     put:
       summary: Modifica un progetto
       description: Modifica un progetto ricevendo un id
-      operationId: AssociaProgettoLavoratore
+      operationId: associaProgettoLavoratore
       parameters:
-        - name: idProgetto
-          in: path
-          description: ID del progetto
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: idLavoratore
-          in: path
-          description: ID del Lavoratore
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: idProgetto
+        in: path
+        description: ID del progetto
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: idLavoratore
+        in: path
+        description: ID del Lavoratore
+        required: true
+        schema:
+          type: integer
+          format: int64
       requestBody:
         description: Aggiorna il progetto
         content:
@@ -134,22 +130,22 @@ paths:
     delete:
       summary: Rimovi un lavoratore associato
       description: Rimuove il lavoratore associato
-      operationId: RimoviProgettoLavoratore
+      operationId: rimoviProgettoLavoratore
       parameters:
-        - name: idProgetto
-          in: path
-          description: ID del progetto
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: idLavoratore
-          in: path
-          description: ID del Lavoratore
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: idProgetto
+        in: path
+        description: ID del progetto
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: idLavoratore
+        in: path
+        description: ID del Lavoratore
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         '201':
           description: Rimozione riuscita
@@ -159,7 +155,6 @@ paths:
                 type: string
         '401':
           description: Progetto not found
-        
 components:
   schemas:
     progettoDTO:
@@ -169,21 +164,17 @@ components:
           type: array
           items:
             type: integer
-          example: [1,2,3]
-          
+          example:
+          - 1
+          - 2
+          - 3
         dataInizio:
           type: string
-          example: 2011-12-03
+          example: 2011-12-03T00:00:00Z
         dataFine:
           type: string
-          example: 2011-12-03
+          example: 2011-12-03T00:00:00Z
         budget:
           type: number
           format: float
-          example: 500.00
-        
-            
-      
-      
-      
-      
+          example: 500.0
