# target/generated-sources/openapi/src/main/java/srl/anagrafica/demo/openapi/api/ProgettoApiController.java
@@ -3,7 +3,7 @@ package srl.anagrafica.demo.openapi.api;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-12-21T17:27:01.592419300+01:00[Europe/Paris]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-12-22T14:52:14.620730400+01:00[Europe/Paris]")
 @Controller
 @RequestMapping("${openapi.gestioneProgetto.base-path:}")
 public class ProgettoApiController implements ProgettoApi {
